# mininode

./: .gitignore  COPYING  Makefile.am  bootstrap  configure.ac  mininode.gemspec  ruby.ac
mininode/: .gitignore  Makefile.am  config.h.in  mininode.c  mininode.c.rpp  mininode.h  mininode.h.rpp
